# indabaXgn-pracs-2025

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  requirements.txt  setup_check.py
data/: README.md
practical_1_intro_to_nn/: README.md  notebook.ipynb  solutions.ipynb
practical_2_cnns/: README.md  notebook.ipynb  solutions.ipynb
practical_3_rnns/: README.md  notebook.ipynb  solutions.ipynb
practical_4_advanced_topics/: README.md  notebook.ipynb  solutions.ipynb
practical_5_projects/: README.md  notebook.ipynb  solutions.ipynb
practicals/: README.md
practicals/fondamentaux-du-deep-learning/: README.md
practicals/hands-on-rags-llm-augmented-search/: .env.example  .gitignore  LANGFUSE_SETUP.md  LANGFUSE_TRACE_DETAILS.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  ui_launcher.py
practicals/hands-on-rags-llm-augmented-search/src/demo_indabax/: __init__.py  cli.py  conversation.py  document_processor.py  embeddings.py  rag.py  reranker.py  ui.py  vector_store.py  web_search.py
practicals/hands-on-rags-llm-augmented-search/tests/: test_document.txt  test_langfuse.py  test_vector_ops.py
practicals/health-information-systems-data-integration-cloud-hosting/: README.md
practicals/ia-generative-innovation-locale/: README.md
practicals/pipeline-aux-modeles-ecosysteme-data/: README.md
utils/: __init__.py  helper_functions.py
